Added list to the page

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -27,15 +27,53 @@
             </nav>
         </header>
         <div class="intro-section" id="list-section">
-            <div><article></article></div>
+            <div class="list list-visible">
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>1</li>
+                </ul>
+            </div>
+            <div class="button-panel button-panel-hidden">
+                <button class="edit-button">EDIT</button>
+                <button class="remove-button">REMOVE</button>
+                <button class="add-button">ADD</button>
+              </div>
         </div>
         <div class="list-section" id="backstory">
             <p>In a galaxy far far away. 
-               people are making list of 
+               people are making lists of 
                their favorite  STAR WARS 
                charracter due
                to a global pandemic called
-               the CORONA VIRUS. Its so addictive that it has
+               the CORONA VIRUS. Its so addicting that it has
                been banned from several planets in the Milkyway. 
                Earth is now the only planet left to enjoy this force of entertainment...</p>
         </div>
