Finished edit button and loading text on sith button

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -48,7 +48,11 @@
                 <button class="edit-button">EDIT</button>
                 <button class="remove-button">REMOVE</button>
                 <button class="add-button">ADD</button>
-              </div>
+            </div>
+            <div class="input-area">
+                <input class="input-name" placeholder="New Name">
+                <input class="input-planet" placeholder="New Planet">
+            </div>
         </div>
         <div class="list-section" id="backstory">
             <p>In a galaxy far far away. 
