Added insert button

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -46,10 +46,11 @@
             </div>
             <div class="button-panel button-panel-hidden">
                 <button class="edit-button">EDIT</button>
+                <button class="insert-button">INSERT</button>
                 <button class="remove-button">REMOVE</button>
                 <button class="add-button">ADD</button>
             </div>
-            <div class="input-area">
+            <div class="input-area insert-area">
                 <input class="input-name" placeholder="New Name">
                 <input class="input-planet" placeholder="New Planet">
             </div>
