last minute change, search function added

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -49,10 +49,14 @@
                 <button class="insert-button">INSERT</button>
                 <button class="remove-button">REMOVE</button>
                 <button class="add-button">ADD</button>
+                <button class="search-button">SEARCH</button>
             </div>
             <div class="input-area insert-area">
-                <input class="input-name" placeholder="New Name">
-                <input class="input-planet" placeholder="New Planet">
+                <input class="input-name" placeholder="Name">
+                <input class="input-planet" placeholder="Planet">
+            </div>
+            <div class="search-area">
+                <input class="input-search" placeholder="search by name">
             </div>
         </div>
         <div class="list-section" id="backstory">
