changed from display flex to display grid on landing page

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -27,6 +27,7 @@
             </nav>
         </header>
         <div class="intro-section" id="list-section">
+            <div class="list-background">
             <div class="list list-visible">
                 <ul>
                     <li>1</li>
@@ -44,6 +45,7 @@
                    
                 </ul>
             </div>
+         </div>
             <div class="button-panel button-panel-hidden">
                 <button class="edit-button">EDIT</button>
                 <button class="insert-button">INSERT</button>
