Fixed intro text and added logging messages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                people are making lists of 
                their favorite  STAR WARS 
                charracter due
-               to a global pandemic called
+               to a galactic pandemic called
                the CORONA VIRUS. Its so addicting that it has
                been banned from several planets in the Milkyway. 
                Earth is now the only planet left to enjoy this force of entertainment...</p>
